# lib/models/Product.js
@@ -2,9 +2,9 @@
 
 const mongoose = require('mongoose');
 const urlConstructor = require('../util/url_constructor');
-let ProductSchema, CompilationSchema, model;
+let ProductSchema, model;
 
-CompilationSchema = new mongoose.Schema({
+let compilation = {
   compilationId: {type: mongoose.Schema.Types.ObjectId, required: true},
   version: {type: String, trim: true, required: true},
   platform: {type: String, trim: true, required: true},
@@ -16,29 +16,20 @@ CompilationSchema = new mongoose.Schema({
   uploaded: {type: Boolean, default: false, required: true},
   filePath: {type: String, trim: true, required: true},
   filename: {type: String, trim: true, required: false, default: ''},
-  bundleId: { type: String, trim: true, required: false, default: ''},
-  publicToken: { type: String, trim: true, required: true, default: ''}
-}, {versionKey: false, toObject: {virtuals: true}, toJSON: {virtuals: true}});
-
-CompilationSchema.virtual('downloadUrl').get(function() {
-  var parent = this.parent();
-  return urlConstructor.getDownloadCompilationUrl(parent, this);
-});
-
-CompilationSchema.virtual('publicUrl').get(function() {
-  return `${this.downloadUrl}?publicToken=${this.publicToken}`;
-});
+  downloadUrl: {type: String, trim: true, required: false, default: ''},
+  bundleId: { type: String, trim: true, required: false, default: ''}
+};
 
 let subscription = { type: String, trim: true};
 
 ProductSchema = new mongoose.Schema({
-  name: {type: String, trim: true, required: true},
+  name: {type: String, trim: true, required: true, unique: true},
   description: {type: String, trim: true, required: true},
   client: {type: String, trim: true, required: true},
   created_at: {type: Date, default: Date.now},
   icon: {type: Buffer, required: false},
   public: {type: Boolean, default: false, required: true},
-  compilations: [CompilationSchema],
+  compilations: [compilation],
   subscriptions: [subscription]
 }, {versionKey: false, toObject: {virtuals: true}, toJSON: {virtuals: true}});
 
