# lib/routes/Compilation.js
@@ -1,6 +1,7 @@
 'use strict';
 
 const compilationManager = require('./../managers/Compilation');
+const errors = require('../util/errors');
 const log = require('../util/logger');
 const config = require('config');
 
@@ -65,20 +66,13 @@ function uploadAckCompilation(req, res, next) {
 
 function downloadCompilation(req, res, next) {
 
-  let publicToken = req.swagger.params.publicToken.value;
-
-  if (!req.session.userId && !req.headers['x-user-id'] && !publicToken) {
-    let loginUrl = config.get('host') + config.get('redirectPaths.login');
-    let downloadUrl = encodeURIComponent(config.get('host') + req.url);
-    let redirectUrl = loginUrl + '?redirect_uri=' + downloadUrl;
-
-    res.redirect(301, redirectUrl);
-    return;
+  if (!req.session.userId && !req.headers['x-user-id']) {
+    return next(new errors.UnauthorizedError('You need to be logged in to download this compilation'));
   }
   let productId = req.swagger.params.id.value;
   let compilationId = req.swagger.params.compilationId.value;
 
-  compilationManager.download(productId, compilationId, publicToken, function(err, result) {
+  compilationManager.download(productId, compilationId, function(err, result) {
     if (err) return next(err);
 
     let url = result.url;
