# lib/routes/Products.js
@@ -3,6 +3,7 @@
 const productManager = require('./../managers/Product');
 const config = require('config');
 
+// GET
 function getProductInfo(req, res, next) {
 
   let id = req.swagger.params.id.value;
@@ -15,6 +16,7 @@ function getProductInfo(req, res, next) {
   });
 }
 
+// PUT
 function updateProductInfo(req, res, next) {
 
   let id = req.swagger.params.id.value;
@@ -27,6 +29,7 @@ function updateProductInfo(req, res, next) {
   });
 }
 
+// DEL
 function deleteProduct(req, res, next) {
 
   let id = req.swagger.params.id.value;
@@ -50,7 +53,7 @@ function createProduct(req, res, next) {
   });
 }
 
-
+// GET
 function listAllProducts(req, res, next) {
 
   let offset = req.swagger.params.offset.value || 0;
@@ -73,21 +76,10 @@ function listAllProducts(req, res, next) {
   });
 }
 
+// GET
 function shareProduct(req, res, next) {
   // TODO: Implement share
   return next();
 }
 
-function deleteAllCompilations(req, res, next) {
-
-  let productId = req.swagger.params.id.value;
-
-  productManager.removeAllCompilations(productId, function(error) {
-
-    if (error) return next(error);
-
-    res.status(204).send();
-  });
-}
-
-module.exports = {getProductInfo, updateProductInfo, deleteProduct, createProduct, listAllProducts, shareProduct, deleteAllCompilations};
+module.exports = {getProductInfo, updateProductInfo, deleteProduct, createProduct, listAllProducts, shareProduct};
